--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "telegram-webapps-types": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
