--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.77.2",
     "serve": "^14.2.3",
+    "tailwindcss": "^3.4.3",
     "telegram-webapps-types": "^1.0.5"
   },
   "devDependencies": {
