--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.0",
     "classnames": "^2.5.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
