--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "react-use-websocket": "^4.8.1",
     "sass": "^1.77.2",
     "serve": "^14.2.3",
     "tailwindcss": "^3.4.3",
